feat(battle): 핫 배틀 응답에 SWIPE 통합 + 참여자 카운트 + hot score 가중치 0.1
핫 배틀
- BattleHotList에 voteType, totalSwipes 필드 추가, projection 갱신
- BattleHotItem.from(item, rank, voteType, denominator): voteType별 점수/비율 분기
- SWIPE 배틀은 swipeRankingScore 기준으로 정렬 + top N 추출

참여자 카운트
- SWIPE 첫 스와이프 시점에 Battle.totalParticipants +1 (existsByBattle_IdAndUserId/GuestId 추가)
- 게스트 캐시 삭제 시 별개 voter 카운트 한계는 수용

hot score
- swipe 가중치 0.5 → 0.1 (가벼운 신호로 재조정)

가독성
- getHotBattleList: attachTopItems 추출, groupingBy+collectingAndThen 분리
- buildTopItems: VoteType::rankingScoreOf 메서드 참조 + sumScores/sortByScoreDesc 헬퍼